Fix misaligned icons in marketplace

--- a/css/blocked-seller.css
+++ b/css/blocked-seller.css
@@ -39,6 +39,7 @@
   height: 14px;
   width: 14px;
   margin-top: 3px;
+  margin-left: 3px;
   vertical-align: top;
 }
 
